--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,29 +1,29 @@
-name: Test build and deploy site
+# name: Test build and deploy site
 
-on:
-  workflow_dispatch: {}
-  push:
-    branches: 
-      - master 
+# on:
+#   workflow_dispatch: {}
+#   push:
+#     branches: 
+#       - master 
 
-jobs:
-  deploy-storybook:
-    name: "Deploy Storybook"
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2-beta
-        with:
-          node-version: 14
-      - run: npm install
-      - run: npm run-script build-storybook
+# jobs:
+#   deploy-storybook:
+#     name: "Deploy Storybook"
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v2
+#       - uses: actions/setup-node@v2-beta
+#         with:
+#           node-version: 14
+#       - run: npm install
+#       - run: npm run-script build-storybook
 
-      - uses: wlixcc/SFTP-Deploy-Action@v1.0 
-        with:  
-          username: 'ubuntu'   #ssh user name
-          server: '${{ secrets.SERVER_IP }}' #引用之前创建好的secret
-          ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }} #引用之前创建好的secret
-          local_path: './storybook-static/*'  # 对应我们项目build的文件夹路径
-          remote_path: '/home/ubuntu/components'
+#       - uses: wlixcc/SFTP-Deploy-Action@v1.0 
+#         with:  
+#           username: 'ubuntu'   #ssh user name
+#           server: '${{ secrets.SERVER_IP }}' #引用之前创建好的secret
+#           ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }} #引用之前创建好的secret
+#           local_path: './storybook-static/*'  # 对应我们项目build的文件夹路径
+#           remote_path: '/home/ubuntu/components'
 
 
