--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -24,21 +24,21 @@ jobs:
           version-type:  'patch'
           tag-prefix:  'v'
 
-  # create-release:
-  #   name: Create GitHub Release
-  #   runs-on: ubuntu-latest
-  #   needs: [bump-version]
-  #   if: needs.bump-version.outputs.new-version != ''
+  create-release:
+    name: Create GitHub Release
+    runs-on: ubuntu-latest
+    needs: [bump-version]
+    if: needs.bump-version.outputs.new-version != ''
     
-  # steps:
-  #   - name: New Version
-  #     env:
-  #       NEW_VERSION: ${{ steps.bump-version.outputs.new-version }}
-  #     run: echo "new version $NEW_VERSION"    
-  #   - name: Create Release
-  #     id: create-release
-  #     uses: marvinpinto/action-automatic-releases@latest
-  #     with:
-  #       automatic_release_tag: ${{needs.bump-version.outputs.new-version}}
-  #       repo_token: ${{ github.token }}
-  #       prerelease: true
+  steps:
+    - name: New Version
+      env:
+        NEW_VERSION: ${{ steps.bump-version.outputs.new-version }}
+      run: echo "new version $NEW_VERSION"    
+    - name: Create Release
+      id: create-release
+      uses: marvinpinto/action-automatic-releases@latest
+      with:
+        automatic_release_tag: ${{ needs.bump-version.outputs.new-version }}
+        repo_token: ${{ github.token }}
+        prerelease: false
