--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.19",
+    "@testing-library/jest-dom": "^5.16.5",
     "classnames": "^2.3.1",
     "rc-tooltip": "^5.2.2",
     "react-transition-group": "^4.4.2",
@@ -47,7 +48,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "npm run clean-build && npm run build-ts && npm run build-css",
-    "test": "react-scripts test",
+    "test": "jest",
     "lint": "eslint --ext js,ts,tsx src",
     "eject": "react-scripts eject",
     "yalc-watch": "yalc-watch",
@@ -56,7 +57,7 @@
     "build-css": "node-sass ./src/Styles/index.scss ./dist/index.css",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public",
-    "prepublish": "npm run lint && npm run build",
+    "prepublish": "npm run lint && npm run test && npm run build",
     "prepare": "husky install"
   },
   "eslintConfig": {
@@ -89,6 +90,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.18.6",
     "@storybook/addon-a11y": "^6.5.14",
     "@storybook/addon-actions": "^6.2.9",
     "@storybook/addon-docs": "^6.5.15",
@@ -98,25 +100,27 @@
     "@storybook/node-logger": "^6.2.9",
     "@storybook/preset-create-react-app": "^3.1.7",
     "@storybook/react": "^6.2.9",
-    "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "@types/classnames": "^2.2.11",
-    "@types/jest": "^26.0.24",
+    "@types/jest": "^29.4.0",
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
     "@types/react-transition-group": "^4.4.2",
     "husky": "^8.0.0",
-    "jest": "^29.3.1",
+    "jest": "^29.4.2",
+    "jest-environment-jsdom": "^29.4.2",
     "node-sass": "^5.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-scripts": "4.0.3",
+    "react-test-renderer": "^18.2.0",
     "rimraf": "^3.0.2",
     "storybook-facelift": "^6.9.0",
+    "ts-jest": "^29.0.5",
     "tsc-watch": "^4.5.0",
-    "typescript": "^4.2.4",
+    "typescript": "^4.9.5",
     "yalc-watch": "^0.0.6"
   }
 }
