--- a/package.json
+++ b/package.json
@@ -1,126 +1,63 @@
 {
-  "name": "miever_ui",
-  "version": "0.1.3",
-  "private": false,
-  "author": "Miever",
-  "license": "MPL-2.0 license",
-  "main": "dist/index.js",
-  "module": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "homepage": "https://github.com/Miever1/miever_ui",
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:Miever1/miever_ui.git"
-  },
-  "files": [
-    "dist"
-  ],
-  "keywords": [
-    "React UI Component",
-    "React",
-    "Miever",
-    "React Components Library"
-  ],
-  "dependencies": {
-    "@emotion/react": ">=11.10.5",
-    "@emotion/styled": ">=11.10.5",
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@fortawesome/free-brands-svg-icons": "^6.2.1",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.19",
-    "@testing-library/jest-dom": "^5.16.5",
-    "classnames": "^2.3.1",
-    "rc-tooltip": "^5.2.2",
-    "react-transition-group": "^4.4.2",
-    "web-vitals": "^1.1.1"
-  },
-  "peerDependencies": {
-    "@emotion/react": ">=11.10.5",
-    "@emotion/styled": ">=11.10.5",
-    "react": ">=17.0.2",
-    "react-dom": ">=17.0.2"
-  },
-  "yalcWatch": {
-    "watchFolder": "dist",
-    "buildWatchCommand": "tsc --watch",
-    "extensions": "js,png,svg,gif,jpeg,css"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "npm run clean-build && npm run build-ts && npm run build-css",
+  "name": "storybook",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+"scripts": {
+    "dev": "vite",
     "test": "jest",
-    "lint": "eslint --ext js,ts,tsx src",
-    "eject": "react-scripts eject",
-    "yalc-watch": "yalc-watch",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
     "clean-build": "rimraf ./dist",
     "build-ts": "tsc -p tsconfig.build.json",
     "build-css": "node-sass ./src/Styles/index.scss ./dist/index.css",
-    "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public",
     "prepublish": "npm run lint && npm run test && npm run build",
     "prepare": "husky install"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ],
-    "overrides": [
-      {
-        "files": [
-          "**/*.stories.*"
-        ],
-        "rules": {
-          "import/no-anonymous-default-export": "off",
-          "import/prefer-screen-queries": "off"
-        }
-      }
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "dependencies": {
+    "@mdx-js/react": "^3.1.0",
+    "miever_ui": "^0.1.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@babel/preset-typescript": "^7.18.6",
-    "@storybook/addon-a11y": "^6.5.14",
-    "@storybook/addon-actions": "^6.2.9",
-    "@storybook/addon-docs": "^6.5.15",
-    "@storybook/addon-essentials": "^6.2.9",
-    "@storybook/addon-links": "^6.2.9",
-    "@storybook/addon-storysource": "^6.5.14",
-    "@storybook/node-logger": "^6.2.9",
-    "@storybook/preset-create-react-app": "^3.1.7",
-    "@storybook/react": "^6.2.9",
-    "@testing-library/react": "^11.2.6",
-    "@testing-library/user-event": "^12.8.3",
-    "@types/classnames": "^2.2.11",
-    "@types/jest": "^29.4.0",
-    "@types/node": "^14.14.37",
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.3",
-    "@types/react-transition-group": "^4.4.2",
-    "husky": "^8.0.0",
-    "jest": "^29.4.2",
-    "jest-environment-jsdom": "^29.4.2",
-    "node-sass": "^5.0.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-scripts": "4.0.3",
-    "react-test-renderer": "^18.2.0",
-    "rimraf": "^3.0.2",
-    "storybook-facelift": "^6.9.0",
-    "ts-jest": "^29.0.5",
-    "tsc-watch": "^4.5.0",
-    "typescript": "^4.9.5",
-    "yalc-watch": "^0.0.6"
+    "@eslint/js": "^9.13.0",
+    "@storybook/addon-docs": "^8.4.1",
+    "@storybook/addon-essentials": "^8.4.1",
+    "@storybook/addon-interactions": "^8.4.1",
+    "@storybook/addon-links": "^8.4.1",
+    "@storybook/blocks": "^8.4.1",
+    "@storybook/react": "^8.4.1",
+    "@storybook/react-vite": "^8.4.1",
+    "@storybook/test": "^8.4.1",
+    "@storybook/test-runner": "^0.19.1",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.0.1",
+    "@types/jest": "^29.5.14",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@types/react-transition-group": "^4.4.11",
+    "@vitejs/plugin-react": "^4.3.3",
+    "eslint": "^9.13.0",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.14",
+    "eslint-plugin-storybook": "^0.10.2",
+    "globals": "^15.11.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "sass-embedded": "^1.80.6",
+    "storybook": "^8.4.1",
+    "ts-jest": "^29.2.5",
+    "typescript": "~5.6.2",
+    "typescript-eslint": "^8.11.0",
+    "vite": "^5.4.10"
+  },
+  "eslintConfig": {
+    "extends": [
+      "plugin:storybook/recommended"
+    ]
   }
 }
