--- a/package.json
+++ b/package.json
@@ -2,26 +2,31 @@
   "name": "miever_ui",
   "version": "0.1.8",
   "private": false,
-  "author": "Miever",
-  "license": "MPL-2.0 license",
-  "type": "module",
-  "main": "dist/index.js",
-  "module": "dist/index.js",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.es.js",
   "types": "dist/index.d.ts",
-  "homepage": "https://github.com/Miever1/miever_ui",
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:Miever1/miever_ui.git"
-  },
+  "style": "dist/style.css",
   "files": [
-    "dist"
+    "dist" 
   ],
+  "type": "module",
+  "exports": {
+    ".": {
+      "import": "./dist/index.es.js",
+      "require": "./dist/index.cjs.js"
+    }
+  },
+  "peerDependencies": {
+    "react": "^17.0.0 || ^18.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0"
+  },
   "keywords": [
     "React UI Component",
     "React",
     "Miever",
     "React Components Library"
   ],
+  "sideEffects": false,
   "scripts": {
     "dev": "vite",
     "test": "jest",
@@ -34,13 +39,8 @@
     "prepublish": "npm run lint && npm run test && npm run build",
     "prepare": "husky install"
   },
-  "dependencies": {
-    "@mdx-js/react": "^3.1.0",
-    "miever_ui": "^0.1.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
-  },
   "devDependencies": {
+    "@mdx-js/react": "^3.1.0",
     "@eslint/js": "^9.13.0",
     "@storybook/addon-docs": "^8.4.1",
     "@storybook/addon-essentials": "^8.4.1",
