--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     ".": {
       "import": "./dist/index.es.js",
       "require": "./dist/index.cjs.js"
-    }
+    },
+    "./style.css": "./dist/style.css"
   },
   "keywords": [
     "React UI Component",
