--- a/package.json
+++ b/package.json
@@ -60,16 +60,15 @@
     "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^3.2.2",
     "@eslint/js": "^9.13.0",
-    "@storybook/addon-docs": "^8.4.1",
     "@storybook/addon-essentials": "^8.4.1",
     "@storybook/addon-interactions": "^8.4.1",
-    "@storybook/addon-links": "^8.4.1",
+    "@storybook/addon-onboarding": "^8.4.1",
     "@storybook/blocks": "^8.4.1",
     "@storybook/react": "^8.4.1",
     "@storybook/react-vite": "^8.4.1",
     "@storybook/test": "^8.4.1",
-    "@storybook/test-runner": "^0.19.1",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.1",
     "@types/jest": "^29.5.14",
@@ -85,6 +84,7 @@
     "husky": "^9.1.6",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "rimraf": "^5.0.10",
     "sass-embedded": "^1.80.6",
     "storybook": "^8.4.1",
     "ts-jest": "^29.2.5",
@@ -97,8 +97,5 @@
     "extends": [
       "plugin:storybook/recommended"
     ]
-  },
-  "resolutions": {
-    "esbuild": "^0.24.0"
   }
 }
