--- a/package.json
+++ b/package.json
@@ -5,24 +5,26 @@
   "author": "Miever",
   "license": "MPL-2.0 license",
   "type": "module",
-  "main": "dist/index.cjs.js",
-  "module": "dist/index.es.js",
-  "types": "dist/index.d.ts",
-  "style": "dist/style.css",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "types": "dist/types/index.d.ts",
   "homepage": "https://github.com/Miever1/miever_ui",
   "repository": {
     "type": "git",
     "url": "git@github.com:Miever1/miever_ui.git"
   },
   "files": [
-    "dist"
+    "dist/cjs",
+    "dist/esm",
+    "dist/types",
+    "dist/index.css"
   ],
   "exports": {
     ".": {
-      "import": "./dist/index.es.js",
-      "require": "./dist/index.cjs.js"
+      "import": "./dist/esm/index.js",
+      "require": "./dist/cjs/index.js"
     },
-    "./style.css": "./dist/style.css"
+    "./style": "./dist/index.css"
   },
   "keywords": [
     "React UI Component",
@@ -35,16 +37,13 @@
     "test": "jest",
     "build": "npm run clean-build && tsc -b tsconfig.build.json && vite build",
     "lint": "eslint .",
+    "watch": "tsc -b tsconfig.build.json --watch",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "clean-build": "rimraf ./dist",
     "prepublish": "npm run lint && npm run test && npm run build",
     "prepare": "husky install"
-  },
-  "peerDependencies": {
-    "react": "^17.0.0 || ^18.0.0",
-    "react-dom": "^17.0.0 || ^18.0.0"
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
@@ -61,16 +60,15 @@
     "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^3.2.2",
     "@eslint/js": "^9.13.0",
-    "@storybook/addon-docs": "^8.4.1",
     "@storybook/addon-essentials": "^8.4.1",
     "@storybook/addon-interactions": "^8.4.1",
-    "@storybook/addon-links": "^8.4.1",
+    "@storybook/addon-onboarding": "^8.4.1",
     "@storybook/blocks": "^8.4.1",
     "@storybook/react": "^8.4.1",
     "@storybook/react-vite": "^8.4.1",
     "@storybook/test": "^8.4.1",
-    "@storybook/test-runner": "^0.19.1",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.1",
     "@types/jest": "^29.5.14",
@@ -86,12 +84,14 @@
     "husky": "^9.1.6",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "rimraf": "^5.0.10",
     "sass-embedded": "^1.80.6",
     "storybook": "^8.4.1",
     "ts-jest": "^29.2.5",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
-    "vite": "^5.4.10"
+    "vite": "^5.4.10",
+    "vite-plugin-dts": "^4.3.0"
   },
   "eslintConfig": {
     "extends": [
