--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mdx-js/react": "^3.1.0",
+    "@storybook/theming": "^8.6.14",
     "classnames": "^2.5.1",
     "rc-tooltip": "^6.2.1",
     "react": "^18.3.1",
