--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "rimraf": "^5.0.10",
     "sass-embedded": "^1.80.6",
     "storybook": "^8.4.7",
+    "storybook-dark-mode": "^4.0.2",
     "ts-jest": "^29.2.5",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
